# UnrealEngine-Xcode-LSP

./: Build.sh  README.md  UnrealEngineLSP.cpp  UnrealEngineLSP.cpp.backup  main.cpp  unreal-lsp-server
UnrealEngine-Xcode-LSP/UnrealEngine-Xcode-LSP.xcodeproj/: project.pbxproj
UnrealEngine-Xcode-LSP/UnrealEngine-Xcode-LSP.xcodeproj/project.xcworkspace/xcuserdata/mac1.xcuserdatad/: UserInterfaceState.xcuserstate
UnrealEngine-Xcode-LSP/UnrealEngine-Xcode-LSP.xcodeproj/xcuserdata/mac1.xcuserdatad/xcschemes/: xcschememanagement.plist
UnrealEngine-Xcode-LSP/UnrealEngine-Xcode-LSP/include/: UnrealEngineLSP.hpp
UnrealEngine-Xcode-LSP/UnrealEngine-Xcode-LSP/src/: UnrealEngineLSP.cpp
Xcode-UnrealIntellisence/: Build.sh  CMakeLists.txt  sourcekit-lsp.json
Xcode-UnrealIntellisence.xcodeproj/project.xcworkspace/xcuserdata/mac1.xcuserdatad/: UserInterfaceState.xcuserstate
